--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
+    "import-csv": "node scripts/importVinyls.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
