--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,9 @@ dist-ssr
 *.sln
 *.sw?
 
+# Environment variables (mantener .env.example)
 .env
+.env.local
+.env.development
+.env.production
+.env.*.local
