--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "update-image": "node scripts/updateProductImage.js",
     "add-images": "node scripts/addProductImages.js",
     "migrate-production": "node scripts/migrateProduction.js",
+    "create-admin": "node --env-file=.env.development scripts/createAdmin.js",
+    "migrate-auth": "node -e \"require('dotenv').config({path:'.env.development'}); const db=require('./src/config/database'); const fs=require('fs'); db.query(fs.readFileSync('./database/migration_auth.sql','utf-8')).then(()=>{ console.log('✅ Migración auth completada'); process.exit(0); }).catch(e=>{ console.error(e.message); process.exit(1); })\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,10 +24,12 @@
   "type": "commonjs",
   "dependencies": {
     "@supabase/supabase-js": "^2.95.3",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.0.0",
     "cors": "^2.8.6",
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.18.0"
   },
